# customer-curn-prediction-asistant-api

./: README.md  main.py  pyproject.toml
Data/: Telco_Customer_Churn_Cleaned.csv  Telco_Customer_Churn_Model_Ready.csv  notes.txt
notebooks/: EDA_data.ipynb  train.ipynb  train_oversampling.ipynb  train_undersampling.ipynb  workflow_architecturee.ipynb
notebooks/eda/: EDA_data.ipynb  eda_pre-processing.ipynb
notebooks/training/: train.ipynb  train_oversampling.ipynb  train_svc.ipynb  train_undersampling.ipynb
src/api/: main.py  routes.py
src/app/: service.py
src/app/agent/: graph.py  schema.py
src/app/agent/nodes/: input_nodes.py  predict_nodes.py  preprocess_nodes.py  prevention_nodes.py  response_nodes.py  retention_nodes.py
src/app/models/: model.py  model_metadata.json  svc_pipeline.pkl  svc_transformers.py  xgb_undersampling_pipeline.pkl
src/app/prompt/: template.py
src/config/: settings.py  tracing.py
